@@ -1058,18 +1058,6 @@ replace restart {
 // canAssign('b' %2) is true, iff or a,%2 is possible.
 
 replace restart {
-	ld	(hl),#0x00
-	inc	hl
-	ld	(hl),#0x00
-} by {
-	xor	a, a
-	; peephole 105 cached zero in a.
-	ld	(hl), a
-	inc	hl
-	ld	(hl), a
-} if notUsed('a')
-
-replace restart {
 	ld	hl,#%1
 	add	hl,%2
 	inc	hl
